--- a/libtdriverutil/tdriver_executedialog.ui
+++ b/libtdriverutil/tdriver_executedialog.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QPlainTextEdit" name="outputView"/>
+    <widget class="QTextBrowser" name="outputView"/>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
